# veda-data-pipelines

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  OPERATING.md  README.md  batch-cluster.tf  batch_job_def.tf  cdk.json  color-mapping.ipynb  constraints.txt  convert.py  datasets.json  docker-compose-test.yaml  env copy.sh  env.json.example  env.sample.sh  env.sh  generate-ssm.py  generate-ssm.sh  handler.py  handler_netcdf.py  lambdas.tf  main.tf  pyproject.toml  requirements.txt  run.sh  terraform.tfvars  todos.md  variables.tf
.github/ISSUE_TEMPLATE/: add-a-new-data-layer-to-a-dashboard--high-level-steps-.md  add-new-dataset-simple.md  identify-arco-dataset-for-dashboard.md  identifying-arco-dataset-for-dashboard.md  story.md
.github/workflows/: build_and_push_to_ecr.yml  cicd.yml  deploy.yml  deploy_dev.yml  deploy_oidc.yml  deploy_staging.yml  deploy_test.yml  dispatch_deploy.yml  test_docker_lambda.yml  test_lambdas.yml  test_python_lambda.yml  test_single_lambda.yml  validate_dataset.yml
cdk/: README.md  app.py
cdk/cdk/: cdk_stack.py
cmr-query/: Dockerfile  README.md  handler.py  requirements.txt  run.py
cogify/: Dockerfile  README.md  example.ini  handler.py
dags/: example_dag.py  requirements.txt
dags/veda_data_pipeline/: veda_discover_pipeline.py  (+2 more)
db-write/: README.md  handler.py
deploy/: README.md  app.py  cdk.json  config.py  requirements.txt
docker/: Dockerfile  README.md  example.ini  handler.py  run.py
infrastructure/: .terraform.lock.hcl  main.tf  mwaa_environment_variables.tpl  outputs.tf  terraform.tf.tmpl  terraform.tfvars.tmpl  variables.tf
lambdas/: rerun-batch.py
metadata/: imerg.json
mwaa/: .env.example  README.md  deploy.sh  requirements.txt
ndjson-builder/: handler.py  requirements.txt
notebooks/: check-tws-anamoly-data (1).ipynb  check-tws-anamoly-data.ipynb
s3-discovery/: Dockerfile  README.md  handler.py
scripts/: build-pyhdf-macosx.sh  cdk.py  collection.py  collection.sh  deploy.sh  insert_collections.md  item.py  item.sh  local.sh  reconcileFiles.js  test.sh  update_collections.md  upload_collection_files.py  utils.py  validate_collections.py
stac/: handler.py
stac-gen/: .handler.py.swo  README.md  handler.py  requirements.txt
terraform/: README.md  main.tf  variables.tf.example
(+537 files in other folders)
