[tool.poetry]
name = "cloud-optimized-data-pipelines"
version = "0.1.0"
description = "Cloud pipelines for ingesting cloud optimized data"
authors = ["IMPACT", "DevSeed"]
license = "MIT"
packages = [
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
boto3 = "^1.21.43"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
insert-collection = "scripts.collection:insert"
delete-collection = "scripts.collection:delete"
update-collection = "scripts.collection:update"
insert-item = "scripts.item:insert"
delete-item = "scripts.item:delete"
update-item = "scripts.item:update"
